[package]
name = "discourse-webhooks"
version = "0.1.0"
edition = "2021"
description = "Type-safe Rust library for handling Discourse webhook events"
license = "MIT"
repository = "https://github.com/Jontes-Tech/discourse-webhooks"
keywords = ["discourse", "webhook", "web", "api"]
categories = ["web-programming", "api-bindings"]

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "advanced"
path = "examples/advanced.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []