[package]
name = "discourse-webhooks"
version = "0.2.0"
edition = "2021"
description = "Type-safe Rust library for handling Discourse webhook events"
license = "MIT"
repository = "https://github.com/Jontes-Tech/discourse-webhooks"
homepage = "https://github.com/Jontes-Tech/discourse-webhooks"
documentation = "https://docs.rs/discourse-webhooks"
keywords = ["discourse", "webhook", "web", "api"]
categories = ["web-programming", "api-bindings"]
authors = ["Jonatan Holmgren <jonatan@jontes.page>"]
readme = "README.md"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "advanced"
path = "examples/advanced.rs"

[[example]]
name = "basic_async"
path = "examples/basic_async.rs"
required-features = ["async"]

[[example]]
name = "advanced_async"
path = "examples/advanced_async.rs"
required-features = ["async"]

[dependencies]
async-trait = { version = "0.1", optional = true }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4"

[features]
default = []
async = ["async-trait"]